--- a/_data/data.yml
+++ b/_data/data.yml
@@ -24,7 +24,7 @@ sidebar:
     stack-overflow: 9969183/rishab-patwari # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
-    resumelink:
+    resumelink: "resume/Rishab_Patwari_Resume.pdf"
 
     languages:
       - idiom: English
