Corrected spelling of entrepreneurial

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,7 +49,7 @@ sidebar:
 career-profile:
     title: About Me
     summary: |
-      I am a self-starter who has entreprenurial ambitions and a strong interest to design, build and manage products.
+      I am a self-starter who has entrepreneurial ambitions and a strong interest to design, build and manage products.
       While complex engineering problems interest me, I am really passionate about creating applied solutions to solve 
       real customer problems with business considerations. My expertise spans across both hardware and software development 
       and I have had recent experience with deskptop, mobile and web development as well as microcontroller applications.
