Updated email address

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -12,7 +12,7 @@ sidebar:
     avatar: patwaririshab.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: patwariri@gmail.com
+    email: rishab.patwari@u.nus.edu
     phone: +65 96743177
     website: patwaririshab.github.io #do not add http://
     linkedin: rishab-patwari
