Updated skill: Git

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -247,6 +247,9 @@ skills:
       - name: React Native
         level: 60%
 
+      - name: Git
+        level: 70%
+
       - name: HTML5 & CSS
         level: 60%
 
